-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0
-
None
-
-
4cffb3b5f (dev), 3e971798e (6.6), 937469f06 (6.5)
After upgrading to PySide 6.5.0 (the Qt implementation for python), the rendering of inactive components (e.g. an inactive button, as in the screenshot below) does not work properly when the operating system is in dark-mode.
Specifically, it appears that inactive components are always rendered in "light mode", even if the environment is in "dark mode". If the component is made active, then it gets proper rendering (coloring), the problem only occurs when the component is inactive.
The application behaves as expected when run with PySide 6.4.x, but updating to PySide 6.5.x breaks it.
In addition, tooltips are also not properly displayed under PySide 6.5.x anymore (but they work as expected under PySide 6.4.x).
The issue affects linux machines (tested on Ubuntu 20.04 and above), but does not appear on Mac OS (not tested on Windows).
Additional note: The issue is reproducible with Qt 6.5.3
| For Gerrit Dashboard: QTBUG-113486 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 510435,5 | Fix disabled button color in Linux (X11/Wayland) | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 510571,2 | Fix disabled button color in Linux (X11/Wayland) | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 510604,1 | Fix disabled button color in Linux (X11/Wayland) | 6.6.0 | qt/qtbase | Status: ABANDONED | +2 | 0 |
| 510605,2 | Fix disabled button color in Linux (X11/Wayland) | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |